--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -4,7 +4,17 @@
     margin: 10px auto;
     width: 800px;
     border-radius: 10px;
+}
 
+.question-page {
+    border: 2px solid black;
+    padding: 10px;
+    margin: 10px auto;
+    border-radius: 10px;
+}
+
+h1 {
+    margin: 10px auto;
 }
 
 .question:hover {
