--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .question {
     border: 2px solid black;
     padding: 10px;
@@ -10,11 +14,12 @@
     border: 2px solid black;
     padding: 10px;
     margin: 10px auto;
+
     border-radius: 10px;
 }
 
 h1 {
-    margin: 10px auto;
+    margin: 0 auto;
 }
 
 .question:hover {
@@ -25,4 +30,22 @@ h1 {
 
 ul {
     list-style: none;
+}
+.page_404 {
+    background: grey;
+    text-align: center;
+    height: 100vh;
+    margin: 0 auto;
+}
+
+.page_404 h1 {
+    padding-top: 30vh;
+    color: darkred;
+    font-size: 80px;
+    font-weight: bold;
+}
+
+.page_404 p {
+    font-size: 20px;
+    font-weight: bold;
 }
