--- a/src/main/resources/templates/welcome_page.html
+++ b/src/main/resources/templates/welcome_page.html
@@ -42,7 +42,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Ask Your Question</button>
+            <a href="/question/create" class="btn btn-outline-success my-2 my-sm-0" type="submit">Ask Your Question</a>
         </form>
     </div>
 </nav>
