--- a/src/main/resources/templates/answer_create.html
+++ b/src/main/resources/templates/answer_create.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-3">
-            <h2 th:text="${question.body()}"></h2>
+            <h2 th:text="${question.body}"></h2>
             <form method="post">
                 <div class="form-group">
                     <label for="answer">Your answer here</label>
