--- a/src/main/resources/templates/welcome_page.html
+++ b/src/main/resources/templates/welcome_page.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Welcome Page</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{/css/main.css}">
-    <script th:src="@{/js/main.js}"></script>
-
-</head>
+<head th:include="fragments :: header"></head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -60,9 +53,6 @@
         </li>
     </th:block>
 </ul>
-
-<script th:src="@{/js/bootstrap.min.js}"></script>
-<script th:src="@{/js/popper.min.js}"></script>
-<script th:src="@{/js/jquery-3.2.1.slim.min.js}"></script>
+<section th:include="fragments :: js_files"></section>
 </body>
 </html>
