--- a/src/main/resources/templates/welcome_page.html
+++ b/src/main/resources/templates/welcome_page.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="fragments :: header"></head>
+<head>
+    <meta charset="UTF-8">
+    <title>Welcome Page</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+</head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -14,27 +19,8 @@
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <a href="/question/create" class="btn btn-outline-success my-2 my-sm-0" type="submit">Ask Your Question</a>
         </form>
     </div>
@@ -44,15 +30,27 @@
 <ul>
     <th:block th:each="question : ${questions}">
         <li>
-            <div class="question" th:onclick="getQuestion([[${question.id}]])">
+            <!--th:onclick="getQuestion([[${question.id}]])"-->
+            <div class="question" >
                 <h2 th:text="${question.title}"></h2>
-                <p th:text="${question.body}"></p>
                 <span>Read Count <span th:text="${question.readCount}"></span></span> ||
                 <span>Answers Count <span th:text="${question.answersCount}"></span></span>
+                <br />
+                <a th:href="@{'/question/see/'+${question.id}}">view</a> ||
+                <a th:href="@{'/question/update/'+${question.id}}">update</a> ||
+                <a th:href="@{'/question/delete/'+${question.id}}">delete</a>
             </div>
         </li>
     </th:block>
 </ul>
-<section th:include="fragments :: js_files"></section>
+
+
+<th:block th:fragment="js_files">
+    <script th:src="@{/js/main.js}"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/popper.min.js}"></script>
+    <script th:src="@{/js/jquery-3.2.1.slim.min.js}"></script>
+</th:block>
+<!--<section th:include="~{parts :: js_files}"></section>-->
 </body>
 </html>
